--- a/.github/score-resume.yaml
+++ b/.github/score-resume.yaml
@@ -2,11 +2,6 @@ name: Score Resume
 
 on:
   push:
-  #   branches:
-  #     - main
-  # pull_request:
-  #   branches:
-  #     - main
 
 jobs:
   score_resume:
@@ -21,13 +16,14 @@ jobs:
 
       - name: Set Resume Text
         run: |
+          ls -lah
           echo """RESUME_TEXT=$(cat resume_details.yaml)""" >> $GITHUB_ENV
 
-      - name: Run gemini-qualified action
-        uses: dev-dull/gemini-qualified@gemini-qualify
-        with:
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-          GEMINI_MODEL: gemini-2.0-flash
-          RESUME_TEXT: ${{ env.RESUME_TEXT }}
-          RESUME_MIME_TYPE: application/yaml
-          JOB_DESCRIPTION: ${{ secrets.TESTING_DELETE }}
+      # - name: Run gemini-qualified action
+      #   uses: dev-dull/gemini-qualified@gemini-qualify
+      #   with:
+      #     GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+      #     GEMINI_MODEL: gemini-2.0-flash
+      #     RESUME_TEXT: ${{ env.RESUME_TEXT }}
+      #     RESUME_MIME_TYPE: application/yaml
+      #     JOB_DESCRIPTION: ${{ secrets.TESTING_DELETE }}
