add missing 'shell' parameters

--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -25,19 +25,22 @@ inputs:
     default: text/plain
 
 runs:
-  using: 'composite'
+  using: composite
   steps:
     - name: Save Resume
+      shell: bash
       run: |
         echo "Saving resume text to file..."
         echo "${{ inputs.RESUME_TEXT }}" > resume.txt
         echo "Resume saved to resume.txt"
     - name: Save Job Description
+      shell: bash
       run: |
         echo "Saving job description to file..."
         echo "${{ inputs.JOB_DESCRIPTION }}" > job_description.txt
         echo "Job description saved to job_description.txt"
     - name: Build Payload
+      shell: bash
       run: |
         echo "Building payload..."
         cat > "/tmp/payload.json" << EOF
@@ -48,12 +51,12 @@ runs:
                 "text": |
                   Compare the resume and job description and provide a JSON formatted response containing the following key/value pairs:
                   - score: a score between 1 and 100 for how well the resume matches the job description.
-                  - explanation: a detailed explanation of the score.
+                  - explanation: an explanation of the score no longer than 250 words.
                   - deficiencies: a list of deficiencies in the resume that the candidate likely possesses, but could be better highlighted in the resume.
                   - strengths: a list of strengths in the resume that the candidate possesses.
                   - recommendations: a list of specific changes that the candidate should make to their resume to improve their chances of getting the job.
 
-                  The response should be raw JSON, without any additional text or formatting. The JSON should be formatted with 2 spaces for indentation.
+                  The response should be raw JSON, without any additional text or formatting. The JSON should use 2 spaces for indentation.
               },
               {
                 "inline_data": {
@@ -71,6 +74,7 @@ runs:
         }
         EOF
     - name: Run Gemini
+      shell: bash
       run: |
         curl "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=$GOOGLE_API_KEY" \
         -H 'Content-Type: application/json' \
