--- a/.github/workflows/score-resume.yaml
+++ b/.github/workflows/score-resume.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Set Resume Text
         run: |
           ls -lah
-          echo """RESUME_TEXT=$(cat resume_details.yaml)""" >> $GITHUB_ENV
+          echo "RESUME_TEXT=$(cat resume_details.yaml)" >> $GITHUB_ENV
 
       - name: Run gemini-qualified action
         uses: dev-dull/job-search-automations/gemini-qualified@gemini-qualify
