--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -72,7 +72,7 @@ runs:
             headers: {
               'content-type': 'application/json'
             },
-            data: payload
+            body: payload
           });
 
           console.log(response.data);
