--- a/.github/workflows/score-resume.yaml
+++ b/.github/workflows/score-resume.yaml
@@ -14,6 +14,13 @@ jobs:
           repository: dev-dull/resume
           token: ${{ secrets.REPO_TOKEN }}
 
+      - name: Supress personal information (no-op)
+        shell: bash
+        run: |
+          # ${{secrets.ADDRESS}}
+          # ${{secrets.EMAIL}}
+          # ${{secrets.PHONE}}
+
       - name: Set Resume Text
         uses: actions/github-script@v6
         id: set-output
