--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -27,6 +27,9 @@ inputs:
 runs:
   using: composite
   steps:
+    - uses: actions/setup-node@v3 # Or latest version
+      with:
+        node-version: 16 # Or a compatible version
     - name: Simple Query
       uses: actions/github-script@v6
       env:
@@ -38,6 +41,7 @@ runs:
         JOB_DESCRIPTION: ${{ inputs.JOB_DESCRIPTION }}
       with:
         script: |
+          const fetch = require('node-fetch');
           const payload = {
             'contents': [{
               'parts': [
@@ -47,15 +51,16 @@ runs:
               ]
             }]
           }
-          const payload_string = JSON.stringify(payload, null, 2);
-          const response = await github.request(`POST https://generativelanguage.googleapis.com/v1beta/models/${process.env.GEMINI_MODEL}%3AgenerateContent?key=${process.env.GOOGLE_API_KEY}`,
-            {
-              headers: {
-                'content-type': 'application/json'
-              },
-              body: payload_string
-            });
-          console.log(response.data);
+          const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/${process.env.GEMINI_MODEL}:generateContent?key=${process.env.GOOGLE_API_KEY}`, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(payload)
+          });
+
+          const data = await response.json();
+          console.log(data);
 
     # - name: Query Candidate Qualification
     #   uses: actions/github-script@v6
