--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -27,9 +27,9 @@ inputs:
 runs:
   using: composite
   steps:
-    - uses: actions/setup-node@v3 # Or latest version
-      with:
-        node-version: 16 # Or a compatible version
+    # - uses: actions/setup-node@v3 # Or latest version
+    #   with:
+    #     node-version: 16 # Or a compatible version
     - name: Simple Query
       uses: actions/github-script@v6
       env:
