get the test lymric

--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -59,7 +59,7 @@ runs:
           });
 
           const data = await response.json();
-          console.log(data);
+          console.log(data.candidates[0].output.text);
 
     # - name: Query Candidate Qualification
     #   uses: actions/github-script@v6
