--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -110,4 +110,5 @@ runs:
           });
 
           const data = await response.json();
+          console.log(data);
           console.log(data.candidates[0].content.parts[0].text);
