--- a/.github/workflows/score-resume.yaml
+++ b/.github/workflows/score-resume.yaml
@@ -36,5 +36,5 @@ jobs:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
           GEMINI_MODEL: gemini-2.0-flash
           RESUME_TEXT: ${{ env.RESUME_TEXT }}
-          # RESUME_MIME_TYPE: application/yaml
+          RESUME_MIME_TYPE: application/yaml
           JOB_DESCRIPTION: ${{ secrets.TESTING_DELETE }}
