fix formatting for system_instructions

--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -39,15 +39,11 @@ runs:
       with:
         script: |
           const payload = {
-            system_instruction: [
-              {
-                parts: [
-                  {
-                    text: "Act as an expert resume reviewer with previous careers in software engineering."
-                  }
-                ]
+            system_instruction: {
+              parts: {
+                text: "Act as an expert resume reviewer with previous careers in software engineering."
               }
-            ],
+            },
             parameters: {
               response_format: "json"
             },
