I really want to be able to set the resposne format, but I think this will also fail

--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -44,9 +44,7 @@ runs:
                 text: "Act as an expert resume reviewer with previous careers in software engineering."
               }
             },
-            parameters: {
-              response_format: "json"
-            },
+            response_format: "json",
             contents: [
               {
                 parts: [
