--- a/.github/workflows/score-resume.yaml
+++ b/.github/workflows/score-resume.yaml
@@ -31,9 +31,17 @@ jobs:
             core.exportVariable('RESUME_TEXT', resumeText)
 
       - name: Run gemini-qualified action
+        id: gemini-score
         uses: dev-dull/job-search-automations/gemini-qualified@gemini-qualify
         with:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
           GEMINI_MODEL: gemini-2.0-flash
           RESUME_TEXT: ${{ env.RESUME_TEXT }}
           JOB_DESCRIPTION: ${{ secrets.TESTING_DELETE }}
+
+      - name: Print Gemini Score
+        run: |
+          echo "## Gemini Score:" >> $GITHUB_STEP_SUMMARY
+          echo -e "Gemini text:\n```json\n${{ steps.gemini-score.outputs.RESPONSE_TEXT }}\n```" >> $GITHUB_STEP_SUMMARY
+          echo "## Gemini Raw:" >> $GITHUB_STEP_SUMMARY
+          echo -e "Gemini Raw Response:\n```json\n${{ steps.gemini-score.outputs.RAW }}\n```" >> $GITHUB_STEP_SUMMARY
